[gd_scene load_steps=10 format=3 uid="uid://bigyguom7ggbr"]

[ext_resource type="Script" path="res://Escenas/puntuaciones.gd" id="1_go8q5"]
[ext_resource type="Texture2D" uid="uid://ckcy0la1pewyu" path="res://assets/banner.png" id="2_pigrv"]
[ext_resource type="Texture2D" uid="uid://dywirkat8qcoi" path="res://assets/burbuja brillo.png" id="3_vw8q5"]
[ext_resource type="Texture2D" uid="uid://duc3wr70ie3k3" path="res://assets/boton.png" id="4_hkodh"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_l13yl"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="FontFile" id="FontFile_4jv3h"]
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_5fefk"]
font = SubResource("FontFile_4jv3h")
font_size = 27
font_color = Color(0.0313726, 1, 0.211765, 1)
outline_size = 4
outline_color = Color(0, 0.568627, 0.533333, 0.32549)

[sub_resource type="Theme" id="Theme_6m7e6"]
default_font_size = 16

[sub_resource type="LabelSettings" id="LabelSettings_odi16"]
font_size = 20

[node name="Puntuaciones" type="Node2D"]
script = ExtResource("1_go8q5")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 3.0
offset_right = 1155.0
offset_bottom = 648.0
texture = ExtResource("2_pigrv")

[node name="Añade tu nombre" type="Label" parent="." groups=["Persist"]]
texture_filter = 1
material = SubResource("CanvasItemMaterial_l13yl")
offset_left = 447.0
offset_top = 365.0
offset_right = 890.0
offset_bottom = 428.0
text = "AÑADE TU NOMBRE:"
label_settings = SubResource("LabelSettings_5fefk")

[node name="LineEdit" type="LineEdit" parent="." groups=["Persist"]]
offset_left = 472.0
offset_top = 405.0
offset_right = 654.0
offset_bottom = 472.0
theme = SubResource("Theme_6m7e6")
theme_override_font_sizes/font_size = 16
placeholder_text = "Nombre"
right_icon = ExtResource("3_vw8q5")

[node name="Submit" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 454.0
offset_top = 473.0
offset_right = 687.0
offset_bottom = 582.0
texture_normal = ExtResource("4_hkodh")
stretch_mode = 0

[node name="Guardar" type="Label" parent="Submit"]
layout_mode = 0
offset_left = 73.0
offset_top = 37.0
offset_right = 154.0
offset_bottom = 65.0
text = "Guardar"
label_settings = SubResource("LabelSettings_odi16")

[node name="puntuacionesFinales" type="Area2D" parent="."]

[node name="nombres" type="Label" parent="puntuacionesFinales"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_l13yl")
offset_right = 238.0
offset_bottom = 63.0
text = "Nombres"
label_settings = SubResource("LabelSettings_5fefk")

[node name="Segundos" type="Label" parent="puntuacionesFinales"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_l13yl")
offset_left = 716.0
offset_top = 5.0
offset_right = 960.0
offset_bottom = 68.0
text = "SEGUNDOS"
label_settings = SubResource("LabelSettings_5fefk")

[node name="listaNombres" type="Label" parent="puntuacionesFinales"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_l13yl")
offset_left = 4.0
offset_top = 71.0
offset_right = 427.0
offset_bottom = 134.0
text = "aqui van los nombres
"
label_settings = SubResource("LabelSettings_5fefk")

[node name="totalSegundos" type="Label" parent="puntuacionesFinales"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_l13yl")
offset_left = 655.0
offset_top = 74.0
offset_right = 1043.0
offset_bottom = 137.0
text = "aqui los segundos
"
label_settings = SubResource("LabelSettings_5fefk")

[node name="marcador" type="Label" parent="puntuacionesFinales"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_l13yl")
offset_left = 378.0
offset_top = 219.0
offset_right = 766.0
offset_bottom = 282.0
text = "MARCADOR"
label_settings = SubResource("LabelSettings_5fefk")

[node name="Rejugar" type="TextureButton" parent="puntuacionesFinales"]
texture_filter = 1
offset_left = 36.0
offset_top = 393.0
offset_right = 322.0
offset_bottom = 549.0
texture_normal = ExtResource("4_hkodh")
stretch_mode = 0

[node name="volver" type="Label" parent="puntuacionesFinales/Rejugar"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_l13yl")
layout_mode = 0
offset_left = 45.0
offset_top = 54.0
offset_right = 433.0
offset_bottom = 117.0
text = "Volver al menú"
label_settings = SubResource("LabelSettings_5fefk")

[connection signal="pressed" from="Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="puntuacionesFinales/Rejugar" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="puntuacionesFinales/Rejugar" to="." method="_on_rejugar_pressed"]
